Set up home directory for application user. Use generic user name.

--- a/deno/Dockerfile
+++ b/deno/Dockerfile
@@ -7,8 +7,8 @@
 FROM debian:buster-slim
 
 # Application user and directory
-ENV APP_USER deno
-ENV APP_UID 1993
+ENV APP_USER user
+ENV APP_UID 1234
 ENV APP_DIR /app
 
 # Deno version and installation directory
@@ -31,7 +31,9 @@ RUN apt-get -qq update \
  && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
 
 # Create non privileged user to run the application
-RUN useradd --uid ${APP_UID} --user-group ${APP_USER}
+RUN useradd --uid ${APP_UID} --user-group ${APP_USER} \
+ && mkdir /home/${APP_USER} \
+ && chown ${APP_USER}:${APP_USER} /home/${APP_USER}
 
 # Copy application directory tree
 WORKDIR ${APP_DIR}
@@ -39,9 +41,9 @@ COPY . .
 
 # Set up Deno cache directory
 # Create and install bundle
-# Remove generated files
-# Clear Deno cache directory and set application user as its owner
-ENV DENO_DIR ${APP_DIR}/deno_dir
+# Remove generated files and Deno cache directory
+# Set up entry point
+ENV DENO_DIR ${APP_DIR}/deno_cache
 RUN mkdir ${DENO_DIR} \
  && deno bundle --lock ./lock.json \
                 --import-map import_map.json \
@@ -50,10 +52,9 @@ RUN mkdir ${DENO_DIR} \
  && deno install --no-remote --cached-only \
                  --root ${DENO_INSTALL_ROOT} --name run \
                  ${APP_DIR}/app.js \
- && rm -rf Dockerfile \
- && rm -rf ${DENO_DIR}/* \
- && chown ${APP_USER}:${APP_USER} ${DENO_DIR}
-
-# Set up entry point and run as unprivileged user
+ && rm -rf ${DENO_DIR}
 ENTRYPOINT ["/usr/local/bin/run"]
+
+# Run as unprivileged user
 USER ${APP_USER}:${APP_USER}
+ENV DENO_DIR /home/${APP_USER}/.deno
