Avoid binary copy of executable.

--- a/rust/Dockerfile
+++ b/rust/Dockerfile
@@ -6,7 +6,7 @@ FROM rust:latest AS build
 # Required
 ARG EXECUTABLE="hello"
 
-# Optional, may be empty (="")
+# Optional, may be empty ("")
 ARG APP_FILES="file.txt assets/"
 
 RUN update-ca-certificates
@@ -20,18 +20,21 @@ RUN mkdir /app \
   && if [ "${APP_FILES}" != "" ]; then cp -r ${APP_FILES} /app/; fi \
   && cargo build --release \
   && mkdir /app/bin \
-  && cp target/release/${EXECUTABLE} /app/bin/ \
-  && ln -s /app/bin/${EXECUTABLE} /usr/local/bin/run
+  && cp "target/release/${EXECUTABLE}" /app/bin/ \
+  && echo "/app/bin/${EXECUTABLE}" > /app/app-exe-path-fdb6b4b7-0ff2-4854-8f61-42bbe5675a6b
 
-################
-# Runtime image
-################
+###################
+# Deployment image
+###################
 FROM debian:stable-slim as run
 
-# Copy application folder and binary from build image
+# Copy application folder from build image
 WORKDIR /app
 COPY --from=build /app .
-COPY --from=build /usr/local/bin/run /usr/local/bin/run
+
+# Create application runner
+RUN ln -s "$(cat /app/app-exe-path-fdb6b4b7-0ff2-4854-8f61-42bbe5675a6b)" /usr/local/bin/run \
+  && rm /app/app-exe-path-fdb6b4b7-0ff2-4854-8f61-42bbe5675a6b
 
 # Create unprivileged user to run the application
 ARG USER=user
