--- a/react/x/build
+++ b/react/x/build
@@ -50,3 +50,4 @@ mkdir -p "$OUT_DIR"
 deno bundle $LOCK $IMPORT_MAP serve.ts "$OUT_DIR/serve.js"
 deno bundle $LOCK $IMPORT_MAP app.tsx "$OUT_DIR/app.js"
 deno run $LOCK $IMPORT_MAP html.tsx > "$OUT_DIR/app.html"
+cp app.css "$OUT_DIR/"
