--- a/react/Dockerfile.warp
+++ b/react/Dockerfile.warp
@@ -9,7 +9,7 @@ ARG DENO_VERSION=1.11.1
 # Optional, may be empty ("")
 ARG IMPORT_MAP="import_map.json"
 ARG LOCK_FILE="lock.json"
-ARG APP_FILES="app.css app.svg"
+ARG APP_FILES="src/app.css src/app.svg"
 
 # Install Deno binary
 ENV DEBIAN_FRONTEND=noninteractive
@@ -35,11 +35,11 @@ RUN mkdir /app \
   && if [ "${IMPORT_MAP}" != "" ]; then IMPORT_MAP_ARG="--import-map ${IMPORT_MAP}"; fi \
   && deno bundle ${LOCK_FILE_ARG} \
                  ${IMPORT_MAP_ARG} \
-                 app.tsx \
+                 src/app.tsx \
                  /app/app.js \
   && deno run ${LOCK_FILE_ARG} \
               ${IMPORT_MAP_ARG} \
-              html.tsx \
+              src/html.tsx \
               > /app/app.html \
   && cargo build --release --manifest-path serve/Cargo.toml \
   && cp serve/target/release/serve /usr/local/bin/
